--- a/examples/QuickStart/app/src/main/res/values/strings.xml
+++ b/examples/QuickStart/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Skyway Quick Start App</string>
+    <string name="app_name">SkyWay Quick Start App</string>
 </resources>
