--- a/project/skyway_android_sdk/libskywaytest/src/main/res/values/strings.xml
+++ b/project/skyway_android_sdk/libskywaytest/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">libskywayTest</string>
+    <string name="testing">Testing...</string>
+    <string name="finish">Finish!!</string>
 </resources>
